EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Venue__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
  <fullName>Availability_Status__c</fullName><label>Availability Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Available</fullName><default>true</default></value><value><fullName>Reserved</fullName><default>false</default></value><value><fullName>Not Available</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>